# transmission

gtk/: CMakeLists.txt
gtk/icons/: Makefile.am
